--- a/src/TgsSystem/CenterOrderForm.form
+++ b/src/TgsSystem/CenterOrderForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="titleGrpRdBtn">
     </Component>
@@ -8,9 +8,11 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="TGS Center :: Customer Order Form"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <Events>
     <EventHandler event="windowOpened" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowOpened"/>
@@ -38,7 +40,6 @@
                           <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel21" alignment="0" min="-2" pref="174" max="-2" attributes="0"/>
                           <Component id="ErrorLbl" alignment="0" min="-2" pref="211" max="-2" attributes="0"/>
-                          <Component id="CustOrderScrollPane" alignment="0" min="-2" pref="761" max="-2" attributes="1"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -47,8 +48,9 @@
                       <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                       <Component id="LogOutBtn" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="CustOrderScrollPane" alignment="0" min="-2" pref="834" max="-2" attributes="1"/>
               </Group>
-              <EmptySpace pref="28" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -203,8 +205,8 @@
                                               </Group>
                                               <EmptySpace type="separate" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="Emailtxt" pref="200" max="32767" attributes="1"/>
-                                                  <Component id="PostcodeTxt" alignment="0" pref="200" max="32767" attributes="1"/>
+                                                  <Component id="Emailtxt" max="32767" attributes="1"/>
+                                                  <Component id="PostcodeTxt" alignment="0" max="32767" attributes="1"/>
                                               </Group>
                                           </Group>
                                           <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
@@ -266,15 +268,13 @@
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="ComboRoofType" pref="282" max="32767" attributes="1"/>
+                                              <Component id="ComboRoofType" max="32767" attributes="1"/>
                                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                               <Component id="roofPriceTxt" min="-2" pref="66" max="-2" attributes="0"/>
                                               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
                                       <Component id="imgBox" min="-2" pref="222" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -441,7 +441,7 @@
                           <Component id="ComboGardenCenter" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="centerErr" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="55" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="resetBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="saveBtn" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -1072,15 +1072,17 @@
                 <Property name="name" type="java.lang.String" value="imgBox" noResource="true"/>
               </Properties>
 
-              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout"/>
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+                <Property name="useNullLayout" type="boolean" value="true"/>
+              </Layout>
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="ImageBox">
                   <Properties>
                     <Property name="name" type="java.lang.String" value="ImageBox" noResource="true"/>
                   </Properties>
                   <Constraints>
-                    <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-                      <JLayeredPaneConstraints x="10" y="10" width="200" height="180" layer="0" position="-1"/>
+                    <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                      <AbsoluteConstraints x="10" y="10" width="200" height="180"/>
                     </Constraint>
                   </Constraints>
                 </Component>
